tests/valid_inputs/return_void_from_void.cpp
// test that a function that returns void can return void expression
void f() {

}

void g() {
	return f();
}

int main() {

}
