tests/invalid_inputs/sema/multiple_values_under_one_id.cpp

void f(int a);
void f(double d);

int main() {
	f;
}
